--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 azure-core==1.38.0
 azure-identity==1.25.1
 azure-keyvault-secrets==4.10.0
+azure-storage-blob==12.28.0
 blinker==1.9.0
 certifi==2026.1.4
 cffi==2.0.0
