--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+azure-common==1.1.28
 azure-core==1.38.0
 azure-identity==1.25.1
 azure-keyvault-secrets==4.10.0
+azure-mgmt-core==1.6.0
+azure-mgmt-resource==24.0.0
+azure-mgmt-storage==24.0.0
+azure-storage-blob==12.28.0
+babel==2.17.0
 blinker==1.9.0
 certifi==2026.1.4
 cffi==2.0.0
@@ -16,11 +22,16 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 msal==1.34.0
 msal-extensions==1.3.1
+msrest==0.7.1
+oauthlib==3.3.1
 psycopg2==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
 python-dotenv==1.2.1
 requests==2.32.5
+requests-oauthlib==2.0.0
+tkcalendar==1.6.1
 typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
+wheel==0.45.1
