--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
 Flask==3.1.2
+greenlet==3.3.0
 idna==3.11
 isodate==0.7.2
 itsdangerous==2.2.0
@@ -23,15 +24,22 @@ MarkupSafe==3.0.3
 msal==1.34.0
 msal-extensions==1.3.1
 msrest==0.7.1
+numpy==2.4.1
 oauthlib==3.3.1
+pandas==2.3.3
 psycopg2==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
 requests==2.32.5
 requests-oauthlib==2.0.0
+six==1.17.0
+SQLAlchemy==2.0.45
 tkcalendar==1.6.1
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.3
 Werkzeug==3.1.5
 wheel==0.45.1
