--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pycparser==2.23
 PyJWT==2.10.1
 python-dotenv==1.2.1
 requests==2.32.5
+tkcalendar==1.6.1
 typing_extensions==4.15.0
 urllib3==2.6.3
 Werkzeug==3.1.5
