--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+*.log
+config.json
 
 # Unit test / coverage reports
 htmlcov/
