--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,10 @@ MarkupSafe==3.0.3
 msal==1.34.0
 msal-extensions==1.3.1
 msrest==0.7.1
-numpy==2.4.1
+numpy==2.4.0
 oauthlib==3.3.1
 pandas==2.3.3
-psycopg2==2.9.11
+psycopg2-binary==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
